# reproduce-issue

./: Cargo.toml  Dockerfile  Dockerfile.postgres  README.md  docker-compose.yml  nginx.conf  postgresql.conf
.sqlx/: query-549bd623a333c68780ed3880d6e7b6809ed5dc6bb57c997e137db522eb93e976.json  query-599f1d2d53cee21a13d49b87794f3b71bd09bb112fa1d1338930101ded57b4ed.json  query-613665860ed090dd6fcbca826c80100bcf0eed58ced267605c98623da037c9e1.json  query-6c3862012b3e2ea9ed6f771588b99a8df9d035e23f788dd6f70451961510f66a.json  query-a6e51862adba698ebfb1e5c2022b51e65f2d56aee40ccac16773e84e5c35d82c.json
init-scripts/: enabled_extensions.sql
src/: cert_utils.rs  main.rs  profiling.rs
