[package]
name = "investigate-jobs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0.4"
pprof = { version = "0.14.0", features = ["flamegraph"] }
apalis = { version = "0.6", features = ["tracing", "retry", "timeout", "limit"] }
apalis-sql = { version = "0.6", features = ["postgres"] }
futures = "0.3.31"
lazy_static = "1.5.0"
openssl = "0.10.68"


[profile.release]
debug = true 
