[package]
name = "investigate-jobs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
pprof = { version = "0.14.0", features = ["flamegraph"] }
apalis = { version = "0.6.1", features = ["tracing", "retry", "timeout", "limit"] }
apalis-sql = { version = "0.6.1", features = ["postgres"] }
futures = "0.3.31"
thiserror = "2.0.6"

[profile.release]
debug = true 
